--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,11 +2,24 @@
 shopware_repo_url: "https://github.com/shopware/shopware.git"
 shopware_demo_data_url: "http://releases.s3.shopware.com/test_images.zip"
 shopware_install_path: "/var/www/shopware"
-shopware_release: "5.1.2"
+shopware_base_uri: "shopware.dev"
+shopware_base_url: "http://{{ shopware_base_uri }}/"
+shopware_version: "5.1.3"
 shopware_db_host: "localhost"
-shopware_language: "en_GB"
+shopware_db_user: "root"
+shopware_db_password: "root"
 shopware_db_name: "shopware5"
-shopware_db_password: "shopware"
-shopware_db_user: "shopware"
-shopware_app_host: "33.33.33.20"
+shopware_admin_user: "shopware"
+shopware_admin_password: "shopware"
+shopware_admin_name: "shopware"
+shopware_admin_email: "admin@shopware.dev"
+shopware_language: "en_GB"
 shopware_cli_repo: "https://github.com/shopwareLabs/sw-cli-tools.git"
+shopware_id: "yourid"
+shopware_license_password: "yourlicensepassword"
+shopware_swtools_binary_path: "~/bin/sw"
+# put here vtm plugins and plugins from shopware core
+shopware_local_plugins: []
+# put in here plugins that have to be downloaded
+shopware_remote_plugins: []
+shopware_licenses: []
