--- a/tasks/install-swtools.yml
+++ b/tasks/install-swtools.yml
@@ -1,5 +1,5 @@
 ---
-- name: swtools | copy swtools binary file
+cd- name: swtools | copy swtools binary file
   copy:
     src: files/sw.phar
     dest: "{{ shopware_swtools_binary_path }}"
