--- a/tasks/install-plugins.yml
+++ b/tasks/install-plugins.yml
@@ -4,7 +4,7 @@
   args:
     chdir: "{{ shopware_install_path }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | install plugins from directory
   command: ./bin/console sw:plugin:install {{ item }} --activate
@@ -12,28 +12,28 @@
     chdir: "{{ shopware_install_path }}"
   with_items: "{{ shopware_local_plugins }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | install SwagLicense plugins
   command: ./bin/console sw:store:download --username {{ shopware_id }} --password {{ shopware_license_password }} --shopware-version {{ shopware_version }} --domain {{ shopware_base_uri }} SwagLicense
   args:
       chdir: "{{ shopware_install_path }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | refresh
   command: ./bin/console sw:plugin:refresh
   args:
     chdir: "{{ shopware_install_path }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | activate SwagLicense plugin
   command: ./bin/console sw:plugin:install SwagLicense --activate
   args:
     chdir: "{{ shopware_install_path }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | copy license files
   copy:
@@ -47,7 +47,7 @@
     chdir: "{{ shopware_install_path }}"
   with_items: "{{ shopware_licenses }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | install premium plugins
   command: ./bin/console sw:store:download --username {{ shopware_id }} --password {{ shopware_license_password }} --shopware-version {{ shopware_version }} --domain {{ shopware_base_uri }} {{ item }}
@@ -62,7 +62,7 @@
   args:
     chdir: "{{ shopware_install_path }}"
   register: command_result
-  failed_when: "'PHP Stack trace' in command_result.stderr"
+  failed_when: "'PHP Fatal error' in command_result.stderr"
 
 - name: install plugins | clear cache
   command: ./var/cache/clear_cache.sh
