--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,8 @@
 
 - include: install-shopware.yml
 
-- include: install-plugins.yml
+- include: install-licenses.yml
+
+- include: install-local-plugins.yml
+
+- include: install-remote-plugins.yml
