Fix wrong version label. Some little formatting changes.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,21 +3,21 @@ shopware_repo_url: "https://github.com/shopware/shopware.git"
 shopware_install_demo_data: true
 shopware_dev_mode: false
 shopware_install_path: "/var/www/shopware"
-shopware_base_uri: "shopware.dev"
+shopware_base_uri: shopware.dev
 shopware_base_url: "http://{{ shopware_base_uri }}/"
-shopware_version: "latest"
-shopware_db_host: "localhost"
-shopware_db_user: "root"
-shopware_db_password: "root"
-shopware_db_name: "shopware5"
-shopware_admin_user: "shopware"
-shopware_admin_password: "shopware"
-shopware_admin_name: "shopware"
-shopware_admin_email: "admin@shopware.dev"
-shopware_language: "de_DE"
+shopware_version: 5.1.3
+shopware_db_host: localhost
+shopware_db_user: root
+shopware_db_password: root
+shopware_db_name: shopware5
+shopware_admin_user: shopware
+shopware_admin_password: shopware
+shopware_admin_name: shopware
+shopware_admin_email: admin@shopware.dev
+shopware_language: de_DE
 shopware_cli_repo: "https://github.com/shopwareLabs/sw-cli-tools.git"
-shopware_id: "yourid"
-shopware_license_password: "yourlicensepassword"
+shopware_id: yourid
+shopware_license_password: yourlicensepassword
 shopware_swtools_binary_path: "~/bin/sw"
 shopware_local_plugins: []
 shopware_remote_plugins: []
