--- a/tasks/download-plugins.yml
+++ b/tasks/download-plugins.yml
@@ -5,5 +5,5 @@
     chdir: "{{ shopware_install_path }}"
   with_items: "{{ plugins }}"
   register: command_result
-  failed_when: "'PHP Fatal error' in command_result.stderr or 'Plugin {{ item }} not found' in command_result.stdout"
+  failed_when: "'PHP Fatal error' in command_result.stderr or 'Plugin {{ item }} not found' in command_result.stdout or 'Unauthorized' in command_result.stderr"
   changed_when: "'No update available for plugin' not in command_result.stdout"
