Try to upgrade pip in travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
 services: mysql
 
 install:
+  - pip install --upgrade pip
   - pip install ansible
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
 
