--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 ---
-language: php
-php:
-  - '5.6'
-
 sudo: required
+language: python
+python: "2.7"
 
 env:
   - SITE=test.yml
@@ -12,11 +10,12 @@ services: mysql
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install curl python
+  - sudo apt-get install curl
 
 install:
   - pip install ansible
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+  - ansible-galaxy install geerlingguy.php geerlingguy.php-mysql
 
 
 before_script:
