--- a/tests/test.yml
+++ b/tests/test.yml
@@ -14,4 +14,6 @@
       mysql_db: name={{ shopware_db_name }} state=present login_user={{ shopware_db_user }} login_password={{ shopware_db_password }}
 
   roles:
+    - { role: geerlingguy.php }
+    - { role: geerlingguy.php-mysql }
     - { role: ansible-role-shopware }
