--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
   - sudo apt-get install curl
 
 install:
-  - pip install ansible MySQL-python
+  - pip install ansible
+  - pip install ansible
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
   - ansible-galaxy install geerlingguy.php geerlingguy.php-mysql
 
