--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 install:
   - pip install ansible
-  - pip install ansible
+  - pip install MySQL-python
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
   - ansible-galaxy install geerlingguy.php geerlingguy.php-mysql
 
