--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,22 +1,39 @@
 ---
 version: '2'
 services:
-  web:
-    build: .
-    ports:
-      - "80:80"
-    depends_on:
-      - db
-    links:
-      - db
-    volumes:
-      - ..:/etc/ansible/roles/role_under_test:rw
   db:
     image: mysql/mysql-server:5.6
-    ports:
-      - "43306:3306"
     environment:
       MYSQL_DATABASE: shopware5
       MYSQL_USER: shopware
       MYSQL_PASSWORD: shopware
       MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+  base:
+    command: /bin/true
+    build: .
+    volumes:
+      - /app
+  web:
+    image: tests_base
+    hostname: ansible-shopware
+    domainname: ansible-shopware.vm
+    volumes_from:
+      - base
+    depends_on:
+      - db
+    links:
+      - db
+  test:
+    image: tests_base
+    hostname: ansible-test
+    volumes:
+      - ..:/etc/ansible/roles/role_under_test:rw
+    volumes_from:
+      - base
+    depends_on:
+      - db
+      - web
+    links:
+      - db
+      - web
+    command: ansible-playbook /etc/ansible/roles/role_under_test/tests/run.yml
